# xsensors

./: .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  acconfig.h  aclocal.m4  autogen.sh  build.sh  config.h.in  configure  configure.ac  configure.in
pixmaps/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  chips.c  chips.h  gui.c  gui.h  main.c  main.h  prefs.c  prefs.h
xdg/: Makefile.am  Makefile.in  theme.tiff  xsensors.1  xsensors.appdata.xml  xsensors.desktop  xsensors.xpm
