pixmapdir = $(datadir)/pixmaps

pixmap_DATA =	\
	xsensors.xpm

icon48dir = $(datadir)/icons/hicolor/48x48/apps/

icon48_DATA =	\
	icons/48x48/xsensors.png

icon64dir = $(datadir)/icons/hicolor/64x64/apps/

icon64_DATA =	\
	icons/64x64/xsensors.png

icon128dir = $(datadir)/icons/hicolor/128x128/apps/

icon128_DATA =	\
	icons/128x128/xsensors.png

desktopdir = $(datadir)/applications

desktop_DATA =   \
        xsensors.desktop

appdatadir = $(datadir)/appdata

appdata_DATA =	\
	xsensors.appdata.xml
