pixmapdir = $(datadir)/xsensors

pixmap_DATA =	\
	theme.png

icon16dir = $(datadir)/icons/hicolor/16x16/apps/

icon16_DATA =	\
	icons/16x16/xsensors.png

icon24dir = $(datadir)/icons/hicolor/24x24/apps/

icon24_DATA =	\
	icons/24x24/xsensors.png

icon32dir = $(datadir)/icons/hicolor/32x32/apps/

icon32_DATA =	\
	icons/32x32/xsensors.png

icon48dir = $(datadir)/icons/hicolor/48x48/apps/

icon48_DATA =	\
	icons/48x48/xsensors.png

icon64dir = $(datadir)/icons/hicolor/64x64/apps/

icon64_DATA =	\
	icons/64x64/xsensors.png

icon128dir = $(datadir)/icons/hicolor/128x128/apps/

icon128_DATA =	\
	icons/128x128/xsensors.png

desktopdir = $(datadir)/applications

desktop_DATA =   \
        xsensors.desktop

appdatadir = $(datadir)/appdata

appdata_DATA =	\
	xsensors.appdata.xml

mandatadir = $(mandir)/man1

mandata_DATA =	\
	xsensors.1
